--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hisoka-morou",
+  "name": "XyuziMD",
   "version": "2.3.0",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
