--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hisoka-morou",
+  "name": "Kurobu-Botz",
   "version": "2.3.5",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
